Fix for double scrollbars

--- a/public/public/css/bootstrap-overrides.css
+++ b/public/public/css/bootstrap-overrides.css
@@ -592,7 +592,8 @@ hr {
 /* CSS FOR PUBLIC SITE FLOAT ITEM PLAYER */
 
 .preview-container {
-	padding-top: 55px;
+	padding-top: 0px;
+	height: 665px;
 }
 
 div.sub-nav div.container div.row.row {
@@ -660,7 +661,7 @@ margin-top: 5px;
 .profile {
 width: 580px;
 font-family: "Ubuntu", Arial, Helvetica, sans-serif;
-padding: 0 10px;
+padding: 60px 10px 10px 10px;
 }
 
 .profile p.profile-h1 {
@@ -674,5 +675,10 @@ width: 660px !important;
 
 .fancybox-inner {
 width:640px !important;
+}
+
+
+.iframe-preview {
+padding-top: 30px;
 }
 
